--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/textView" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
